--- a/templates/new_mortgage.html
+++ b/templates/new_mortgage.html
@@ -30,38 +30,56 @@
                     <h1 class="text-center">Calculate Mortgage</h1>
                     <p class="text-left text-secondary fs-4">After calculating your estimated payment, you can input an override amount, provided it is higher than the estimated repayment. Once you're satisfied with your entries, confirm the mortgage, and your details will be displayed on the main page.</p>
                     <form id="mortgageForm" action="{{ url_for('new_mortgage') }}" method="POST">
-                        <input type="hidden" name="action" value="calculate">
+                        <input type="hidden" name="action" id="action" value="calculate">
                         <div class="mb-3">
                             <label for="mortgage_name" class="form-label fs-4">Mortgage Name:</label>
-                            <input type="text" class="form-control fs-4" id="mortgage_name" name="mortgage_name" required>
+                            <input type="text" class="form-control fs-4" id="mortgage_name" name="mortgage_name" value="{{ mortgage_name }}" required>
                         </div>
                         <div class="mb-3">
                             <label for="principal" class="form-label fs-4">Principal ($):</label>
-                            <input type="number" class="form-control fs-4" id="principal" name="principal" required>
+                            <input type="number" class="form-control fs-4" id="principal" name="principal" value="{{ principal }}" required>
                         </div>
                         <div class="mb-3">
                             <label for="interest" class="form-label fs-4">Interest (%):</label>
-                            <input type="number" class="form-control fs-4" id="interest" name="interest" step="0.01" required>
+                            <input type="number" class="form-control fs-4" id="interest" name="interest" step="0.01" value="{{ interest }}" required>
                         </div>
                         <div class="mb-3">
                             <label for="term" class="form-label fs-4">Term (Years):</label>
-                            <input type="number" class="form-control fs-4" id="term" name="term" required>
+                            <input type="number" class="form-control fs-4" id="term" name="term" value="{{ term }}" required>
                         </div>
                         <div class="mb-3">
                             <label for="deposit" class="form-label fs-4">Deposit ($):</label>
-                            <input type="number" class="form-control fs-4" id="deposit" name="deposit">
+                            <input type="number" class="form-control fs-4" id="deposit" name="deposit" value="{{ deposit }}">
                         </div>
                         <div class="mb-3">
                             <label for="extra_costs" class="form-label fs-4">Extra Costs ($):</label>
-                            <input type="number" class="form-control fs-4" id="extra_costs" name="extra_costs">
+                            <input type="number" class="form-control fs-4" id="extra_costs" name="extra_costs" value="{{ extra_costs }}">
                         </div>
                         <div class="mb-3">
                             <label for="comment" class="form-label fs-4">Comment:</label>
-                            <textarea class="form-control fs-4" id="comment" name="comment"></textarea>
+                            <textarea class="form-control fs-4" id="comment" name="comment">{{ comment }}</textarea>
                         </div>
+                        <div class="mb-3">
+                            <label for="principal_increment_value" class="form-label fs-4">Principal Increment Value ($):</label>
+                            <input type="number" class="form-control fs-4" id="principal_increment_value" name="principal_increment_value" value="{{ principal_increment_value }}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="number_of_principal_increments" class="form-label fs-4">Number of Principal Increments:</label>
+                            <input type="number" class="form-control fs-4" id="number_of_principal_increments" name="number_of_principal_increments" value="{{ number_of_principal_increments }}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="interest_rate_increment_value" class="form-label fs-4">Interest Rate Increment Value (%):</label>
+                            <input type="number" step="0.01" class="form-control fs-4" id="interest_rate_increment_value" name="interest_rate_increment_value" value="{{ interest_rate_increment_value }}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="number_of_interest_rate_increments" class="form-label fs-4">Number of Interest Rate Increments:</label>
+                            <input type="number" class="form-control fs-4" id="number_of_interest_rate_increments" name="number_of_interest_rate_increments" value="{{ number_of_interest_rate_increments }}">
+                        </div>
+
                         <div class="d-flex justify-content-between">
                             <button type="button" class="btn btn-secondary fs-4" onclick="clearForm()">Clear</button>
-                            <button type="submit" class="btn btn-primary fs-4" onclick="document.getElementById('mortgageForm').action.value='calculate'">Calculate</button>
+                            <button type="button" class="btn btn-primary fs-4" onclick="setActionAndSubmit('calculate', 'mortgageForm')">Calculate</button>
+                            <button type="button" class="btn btn-primary fs-4" onclick="setActionAndSubmit('save_mortgage', 'mortgageForm')">Save Mortgage</button>
                         </div>
                     </form>
                 </div>
@@ -91,6 +109,12 @@
                         <p class="fs-4 mb-3">Fortnightly Extra: $ {{ results.initial_payment_breakdown.initial_extra_fortnightly }}</p>
                         <p class="fs-4 mb-3">Fortnightly Total Repayment: $ {{ results.initial_payment_breakdown.total_repayment_fortnightly }}</p>
 
+                        <h5 class="text-center text-capitalize text-secondary">Increment Results</h5>
+                        <p class="fs-4 mb-3">Principal Increment Value: $ {{ results.increment_results.principal_increment_value }}</p>
+                        <p class="fs-4 mb-3">Number of Principal Increments: {{ results.increment_results.number_of_principal_increments }}</p>
+                        <p class="fs-4 mb-3">Interest Rate Increment Value: {{ results.increment_results.interest_rate_increment_value }} %</p>
+                        <p class="fs-4 mb-3">Number of Interest Rate Increments: {{ results.increment_results.number_of_interest_rate_increments }}</p>
+
                         {% if results.comments %}
                             <h3>Comment</h3>
                             {% for comment in results.comments %}
@@ -103,6 +127,7 @@
                     {% endif %}
                 </div>
             </div>
+
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="override p-4 border bg-light">
                     <p class="text-danger p-3 mb-2 bg-danger text-white fs-4">NOTE: The override amount must be higher than the estimated repayment.</p>
@@ -114,6 +139,11 @@
                         <input class="fs-4" type="hidden" name="deposit" value="{{ deposit }}">
                         <input class="fs-4" type="hidden" name="extra_costs" value="{{ extra_costs }}">
                         <input class="fs-4" type="hidden" name="comment" value="{{ comment }}">
+                        <input class="fs-4" type="hidden" name="principal_increment_value" value="{{ principal_increment_value }}">
+                        <input class="fs-4" type="hidden" name="number_of_principal_increments" value="{{ number_of_principal_increments }}">
+                        <input class="fs-4" type="hidden" name="interest_rate_increment_value" value="{{ interest_rate_increment_value }}">
+                        <input class="fs-4" type="hidden" name="number_of_interest_rate_increments" value="{{ number_of_interest_rate_increments }}">
+                        <input type="hidden" name="action" id="override_action" value="override">
                         <div class="form-check mb-3">
                             <input type="checkbox" class="form-check-input fs-4" id="payment_override_enabled" name="payment_override_enabled" onchange="toggleOverrideFields(this)" {% if payment_override_enabled %} checked {% endif %}>
                             <label class="form-check-label fs-4" for="payment_override_enabled">Enable Payment Override</label>
@@ -128,16 +158,60 @@
                         </div>
                         <div class="d-flex justify-content-between">
                             <button type="button" class="btn btn-secondary fs-4" onclick="clearOverrideForm()">Clear Override</button>
-                            <button type="button" class="btn btn-secondary fs-4" onclick="submitForm('recalculate')">Recalculate with Override</button>
-                            <button type="button" class="btn btn-primary fs-4" onclick="submitForm('save_mortgage')">Save Mortgage</button>
+                            <button type="button" class="btn btn-secondary fs-4" onclick="submitForm('override', 'overrideForm')">Recalculate with Override</button>
+                            <button type="button" class="btn btn-primary fs-4" onclick="setActionAndSubmit('save_mortgage', 'overrideForm')">Save Mortgage</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
+    {% if results.planning_scenarios %}
+    <h5 class="text-center text-capitalize text-secondary">Projected Payments Per Month</h5>
+    <table class="table table-bordered fs-4">
+        <thead>
+            <tr>
+                <th>Interest Rate</th>
+                {% for scenario in results.planning_scenarios %}
+                    <th>${{ scenario.principal }}</th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for i in range(results.increment_results.number_of_interest_rate_increments + 1) %}
+                <tr>
+                    <td>{{ results.increment_results.interest_rate_increment_value * i + results.interest }}</td>
+                    {% for scenario in results.planning_scenarios %}
+                        <td>${{ scenario.monthly_payments[i] }}</td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
-    <!-- remove Account Modal -->
+    <h5 class="text-center text-capitalize text-secondary">Projected Payments Per Fortnight</h5>
+    <table class="table table-bordered fs-4">
+        <thead>
+            <tr>
+                <th>Interest Rate</th>
+                {% for scenario in results.planning_scenarios %}
+                    <th>${{ scenario.principal }}</th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for i in range(results.increment_results.number_of_interest_rate_increments + 1) %}
+                <tr>
+                    <td>{{ results.increment_results.interest_rate_increment_value * i + results.interest }}</td>
+                    {% for scenario in results.planning_scenarios %}
+                        <td>${{ scenario.fortnightly_payments[i] }}</td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
+
     <div class="modal fade" id="removeAccountModal" tabindex="-1" aria-labelledby="removeAccountModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -182,10 +256,13 @@
                 fortnightlyOverrideField.value = "";
             }
         }
+        function setActionAndSubmit(action) {
+            document.getElementById('action').value = action;
+            document.getElementById('mortgageForm').submit();
+        }
 
-        function submitForm(action) {
-            var form = document.getElementById("overrideForm");
-            form.action = "{{ url_for('new_mortgage') }}";
+        function submitForm(action, formId) {
+            var form = document.getElementById(formId);
             var actionInput = document.createElement("input");
             actionInput.type = "hidden";
             actionInput.name = "action";
