--- a/templates/view_projections.html
+++ b/templates/view_projections.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Amortization Schedule</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projections</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -24,94 +26,78 @@
     </nav>
 
     <div class="container-fluid mt-4">
-        <h1 class="text-center p-3 mb-2 bg-primary-subtle text-primary-emphasis ">Amortization Schedule</h1>
+        {% if error_message %}
+            <div class="alert alert-danger" role="alert">
+                {{ error_message }}
+            </div>
+        {% endif %}
 
-        <div class="  btn btn-primary btn-lg text-end mb-3 ">
-            <a href="{{ url_for('export_amortization', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary fs-4">Export as Excel</a>
+        {% if mortgage_details %}
+            <h2 class="text-center p-3 mb-2 bg-primary-subtle text-primary-emphasis ">{{ mortgage_details.mortgage_name }}</h2>
+          <div class="btn btn-primary btn-lg text-end mb-3">
+            <a href="{{ url_for('export_projections', mortgage_id=mortgage_details['mortgage_id']) }}" class="btn btn-primary fs-4">Export Projections as Excel</a>
         </div>
+            <ul class="nav nav-tabs" id="projectionsTabs" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active fs-2" id="monthly-tab" data-bs-toggle="tab" data-bs-target="#monthly" type="button" role="tab" aria-controls="monthly" aria-selected="true">Monthly</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link fs-2" id="fortnightly-tab" data-bs-toggle="tab" data-bs-target="#fortnightly" type="button" role="tab" aria-controls="fortnightly" aria-selected="false">Fortnightly</button>
+                </li>
+            </ul>
 
-        <ul class="nav nav-tabs" id="amortizationTabs" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button class="nav-link active fs-2" id="monthly-tab" data-bs-toggle="tab" data-bs-target="#monthly" type="button" role="tab" aria-controls="monthly" aria-selected="true">Monthly</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link fs-2" id="fortnightly-tab" data-bs-toggle="tab" data-bs-target="#fortnightly" type="button" role="tab" aria-controls="fortnightly" aria-selected="false">Fortnightly</button>
-            </li>
-        </ul>
+            <div class="tab-content" id="projectionsTabsContent">
 
-        <div class="tab-content" id="amortizationTabsContent">
-            <!-- monthly  -->
-            <div class="tab-pane fade show active" id="monthly" role="tabpanel" aria-labelledby="monthly-tab">
-                <div class="table-responsive full-screen-table mt-4">
-                    <table class="table table-striped table-bordered table-hover">
-                        <thead class="table-dark">
-                            <tr class="fs-4">
-                                <th>Period</th>
-                                <th>Balance</th>
-                                <th>Interest</th>
-                                <th>Principal</th>
-                                <th>Extra</th>
-                                <th>Total Payment</th>
-                                <th>New Balance</th>
-                                <th>Accumulated Interest</th>
-                                <th>Accumulated Principal Payment</th>
-                            </tr>
-                        </thead>
-                        <tbody class="fs-4">
-                            {% for row in mortgage.amortization_schedule['monthly'] %}
-                                <tr>
-                                    <td>{{ row.Period }}</td>
-                                    <td>${{ "{:,.2f}".format(row.Balance) }}</td>
-                                    <td>${{ "{:,.2f}".format(row.Interest) }}</td>
-                                    <td>${{ "{:,.2f}".format(row.Principal) }}</td>
-                                    <td>${{ "{:,.2f}".format(row.Extra) }}</td>
-                                    <td>${{ "{:,.2f}".format(row['Total Payment']) }}</td>
-                                    <td>${{ "{:,.2f}".format(row['New Balance']) }}</td>
-                                    <td>${{ "{:,.2f}".format(row['Accumulated Interest']) }}</td>
-                                    <td>${{ "{:,.2f}".format(row['Accumulated Principal Payment']) }}</td>
+                <div class="tab-pane fade show active" id="monthly" role="tabpanel" aria-labelledby="monthly-tab">
+                    <h1 class="text-center fs-3 p-4">Projected Payments Per Month</h1>
+                    <div class="table-responsive mt-4">
+                        <table class="table table-striped table-bordered table-hover">
+                            <thead class="table-dark">
+                                <tr class="fs-4">
+                                    <th>Interest Rate</th>
+                                    {% for principal_value in mortgage_details.projected_payments_monthly[0][1:] %}
+                                        <th>${{ principal_value }}</th>
+                                    {% endfor %}
                                 </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody class="fs-4">
+                                {% for row in mortgage_details.projected_payments_monthly %}
+                                    <tr>
+                                        {% for cell in row %}
+                                            <td>{{ cell }}</td>
+                                        {% endfor %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="fortnightly" role="tabpanel" aria-labelledby="fortnightly-tab">
+                    <h1 class="text-center fs-3 p-4">Projected Payments Per Fortnight</h1>
+                    <div class="table-responsive mt-4">
+                        <table class="table table-striped table-bordered table-hover">
+                            <thead class="table-dark">
+                                <tr class="fs-4">
+                                    <th>Interest Rate</th>
+                                    {% for principal_value in mortgage_details.projected_payments_fortnightly[0][1:] %}
+                                        <th>${{ principal_value }}</th>
+                                    {% endfor %}
+                                </tr>
+                            </thead>
+                            <tbody class="fs-4">
+                                {% for row in mortgage_details.projected_payments_fortnightly %}
+                                    <tr>
+                                        {% for cell in row %}
+                                            <td>{{ cell }}</td>
+                                        {% endfor %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-
-            <!-- fortnightly -->
-            <div class="tab-pane fade" id="fortnightly" role="tabpanel" aria-labelledby="fortnightly-tab">
-                <div class="table-responsive full-screen-table mt-4">
-                    <table class="table table-striped table-bordered table-hover">
-                        <thead class="table-dark">
-                            <tr class="fs-4">
-                                <th>Period</th>
-                                <th>Balance</th>
-                                <th>Interest</th>
-                                <th>Principal</th>
-                                <th>Extra</th>
-                                <th>Total Payment</th>
-                                <th>New Balance</th>
-                                <th>Accumulated Interest</th>
-                                <th>Accumulated Principal Payment</th>
-                            </tr>
-                        </thead>
-                        <tbody class="fs-4">
-                            {% for row in mortgage.amortization_schedule['fortnightly'] %}
-                                <tr>
-                                    <td>{{ row.Period }}</td>
-                                    <td>${{ "{:,.2f}".format(row.Balance) }}</td>
-                                    <td>${{ "{:,.2f}".format(row.Interest) }}</td>
-                                    <td>${{ "{:,.2f}".format(row.Principal) }}</td>
-                                    <td>${{ "{:,.2f}".format(row.Extra) }}</td>
-                                    <td>${{ "{:,.2f}".format(row['Total Payment']) }}</td>
-                                    <td>${{ "{:,.2f}".format(row['New Balance']) }}</td>
-                                    <td>${{ "{:,.2f}".format(row['Accumulated Interest']) }}</td>
-                                    <td>${{ "{:,.2f}".format(row['Accumulated Principal Payment']) }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+        {% endif %}
     </div>
     <div class="modal fade" id="updatePasswordModal" tabindex="-1" aria-labelledby="updatePasswordModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -140,6 +126,8 @@
             </div>
         </div>
     </div>
+
+    
     <div class="modal fade" id="removeAccountModal" tabindex="-1" aria-labelledby="removeAccountModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -166,7 +154,6 @@
             $('#removeAccountBtn').click(function() {
                 $('#removeAccountModal').modal('show');
             });
-
 
             $('#updatePasswordForm').submit(function(event) {
                 event.preventDefault();
