--- a/templates/index.html
+++ b/templates/index.html
@@ -317,7 +317,7 @@
                                     <div class="fs-2">{{ mortgage.created_at.strftime('%B %d, %Y %I:%M %p') }}</div>
                                 </div>
                                 <div class="col">
-                                    <strong class="fs-4">Updated Interest Rate:</strong>
+                                    <strong class="fs-4">Next New Interest Rate:</strong>
                                     <div class="fs-2">{{ mortgage.latest_interest_rate }}% (Effective Date: {{ mortgage.latest_effective_date.strftime('%B %d, %Y') }})</div>
                                 </div>
                             </div>
