--- a/templates/new_mortgage.html
+++ b/templates/new_mortgage.html
@@ -59,6 +59,7 @@
                             <label for="comment" class="form-label fs-4">Comment:</label>
                             <textarea class="form-control fs-4" id="comment" name="comment">{{ comment }}</textarea>
                         </div>
+                        <h3>Adjust the principal and interest rate increments to explore different mortgage repayment scenarios.</h3>
                         <div class="mb-3">
                             <label for="principal_increment_value" class="form-label fs-4">Principal Increment Value ($):</label>
                             <input type="number" class="form-control fs-4" id="principal_increment_value" name="principal_increment_value" value="{{ principal_increment_value }}">
