--- a/templates/update_mortgage.html
+++ b/templates/update_mortgage.html
@@ -23,47 +23,64 @@
             </div>
         </div>
     </nav>
-    <div class="container py-5">
-        <h1 class="text-center">Update Mortgage</h1>
-        <form action="{{ url_for('update_mortgage', mortgage_id=mortgage_id) }}" method="POST">
-            <div class="mb-3">
-                <label for="new_interest_rate" class="form-label">Updated Interest Rate (%):</label>
-                <input type="number" class="form-control" id="new_interest_rate" name="new_interest_rate" value="{{ '{:.2f}'.format(mortgage.interest) }}" step="0.01" required>
+     <div class="container-fluid py-5">
+        <div class="row gx-5">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="main_mortgage p-4 border bg-light">
+                    <h1 class="text-center">Update Mortgage</h1>
+                    <form id="updateMortgageForm" action="{{ url_for('update_mortgage', mortgage_id=mortgage.mortgage_id) }}" method="POST">
+                        <div class="mb-3">
+                            <label for="new_interest_rate" class="form-label fs-4">New Interest Rate (%):</label>
+                            <input type="number" class="form-control fs-4" id="new_interest_rate" name="new_interest_rate" step="0.01" value="{{ mortgage.initial_interest * 100 }}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="current_principal" class="form-label fs-4">Current Principal ($):</label>
+                            <input type="number" class="form-control fs-4" id="current_principal" name="current_principal" value="{{ mortgage.initial_principal }}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="extra_payment" class="form-label fs-4">Extra Payment ($):</label>
+                            <input type="number" class="form-control fs-4" id="extra_payment" name="extra_payment" value="0">
+                        </div>
+                        <div class="mb-3">
+                            <label for="borrowed_amount" class="form-label fs-4">Borrowed Amount ($):</label>
+                            <input type="number" class="form-control fs-4" id="borrowed_amount" name="borrowed_amount" value="0">
+                        </div>
+                        <div class="mb-3">
+                            <label for="updated_monthly_payment" class="form-label fs-4">Updated Monthly Payment ($):</label>
+                            <input type="number" class="form-control fs-4" id="updated_monthly_payment" name="updated_monthly_payment" value="0">
+                        </div>
+                        <div class="mb-3">
+                            <label for="updated_fortnightly_payment" class="form-label fs-4">Updated Fortnightly Payment ($):</label>
+                            <input type="number" class="form-control fs-4" id="updated_fortnightly_payment" name="updated_fortnightly_payment" value="0">
+                        </div>
+                        <button type="submit" class="btn btn-primary fs-4">Update Mortgage</button>
+                    </form>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="extra_payment" class="form-label">Extra Payment ($):</label>
-                <input type="number" class="form-control" id="extra_payment" name="extra_payment" step="0.01">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="result p-4 border bg-light">
+                    <h1 class="text-center">Current Mortgage Details</h1>
+                    <p class="fs-4 mb-3">Mortgage Name: {{ mortgage.mortgage_name }}</p>
+                    <p class="fs-4 mb-3">Initial Principal: $ {{ mortgage.initial_principal }}</p>
+                    <p class="fs-4 mb-3">Initial Interest: {{ mortgage.initial_interest * 100 }} %</p>
+                    <p class="fs-4 mb-3">Initial Term: {{ mortgage.initial_term }} years</p>
+                    <p class="fs-4 mb-3">Initial Deposit: $ {{ mortgage.deposit }}</p>
+                    <p class="fs-4 mb-3">Initial Extra Costs: $ {{ mortgage.extra_costs }}</p>
+                    <p class="fs-4 mb-3">Monthly Payment Override: $ {{ mortgage.monthly_payment_override }}</p>
+                    <p class="fs-4 mb-3">Fortnightly Payment Override: $ {{ mortgage.fortnightly_payment_override }}</p>
+                    <p class="fs-4 mb-3">Start Date: {{ mortgage.start_date.strftime('%Y-%m-%d') }}</p>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="balloon_payment" class="form-label">Balloon Payment ($):</label>
-                <input type="number" class="form-control" id="balloon_payment" name="balloon_payment" step="0.01">
-            </div>
-            <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" id="payment_override_enabled" name="payment_override_enabled" {% if mortgage.payment_override_enabled %}checked{% endif %} onchange="toggleOverrideFields(this)">
-                <label class="form-check-label" for="payment_override_enabled">Enable Payment Override</label>
-            </div>
-            <div class="mb-3">
-                <label for="monthly_payment_override" class="form-label">Monthly Payment Override ($):</label>
-                <input type="number" class="form-control" id="monthly_payment_override" name="monthly_payment_override" value="{{ '{:.2f}'.format(mortgage.monthly_payment_override) if mortgage.monthly_payment_override else '' }}" {% if not mortgage.payment_override_enabled %}disabled{% endif %}>
-            </div>
-            <div class="mb-3">
-                <label for="fortnightly_payment_override" class="form-label">Fortnightly Payment Override ($):</label>
-                <input type="number" class="form-control" id="fortnightly_payment_override" name="fortnightly_payment_override" value="{{ '{:.2f}'.format(mortgage.fortnightly_payment_override) if mortgage.fortnightly_payment_override else '' }}" {% if not mortgage.payment_override_enabled %}disabled{% endif %}>
-            </div>
-            <div class="mb-3">
-                <label for="comment" class="form-label">Add New Comment:</label>
-                <textarea class="form-control" id="comment" name="comment" rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Update Mortgage</button>
-        </form>
-        <hr>
-        <h3>Existing Comments</h3>
-        <ul class="list-group">
-            {% for comment in comments %}
-                <li class="list-group-item">{{ comment }}</li>
-            {% endfor %}
-        </ul>
+        </div>
     </div>
+    <form id="addCommentForm" action="{{ url_for('add_comment', mortgage_id=mortgage_id) }}" method="POST">
+    <div class="mb-3">
+        <label for="comment" class="form-label fs-4">Add Comment:</label>
+        <textarea class="form-control fs-4" id="comment" name="comment" rows="3"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary fs-4">Add Comment</button>
+</form>
+
 
     <script>
         function toggleOverrideFields(checkbox) {
