--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,6 @@
                                     </form>
                                 </div>
                             </div>
-
                             <!-- initial payment -->
                             <div class="col-md-4">
                                 <h5 class="text-center fs-4">Initial Payment Breakdown</h5>
@@ -130,7 +129,6 @@
                                     </table>
                                 </div>
                             </div>
-
                             <!-- monthly breakdown -->
                             <div class="col-md-4">
                                 <h5 class="text-center fs-4">Monthly Breakdown Details</h5>
@@ -167,7 +165,6 @@
                                     </table>
                                 </div>
                             </div>
-
                             <!-- fortnightly breakdown -->
                             <div class="col-md-4">
                                 <h5 class="text-center fs-4">Fortnightly Breakdown Details</h5>
@@ -205,15 +202,13 @@
                                 </div>
                             </div>
                         </div>
-
                         <hr>
-
                         <!-- maturity details -->
                         <div class="container">
                             <div class="row">
                                 <!-- monthly -->
                                 <div class="col-md-6">
-                                    <h5 class="text-center fs-4">Mortgage Maturity Details - Monthly</h5>
+                                    <h5 class="text-center fs-4">Mortgage Maturity Details—Monthly</h5>
                                     <div class="table-responsive full-screen-table">
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead class="table-dark">
@@ -255,10 +250,9 @@
                                         </table>
                                     </div>
                                 </div>
-
                                 <!-- fortnightly -->
                                 <div class="col-md-6">
-                                    <h5 class="text-center fs-4">Mortgage Maturity Details - Fortnightly</h5>
+                                    <h5 class="text-center fs-4">Mortgage Maturity Details—Fortnightly</h5>
                                     <div class="table-responsive full-screen-table">
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead class="table-dark">
@@ -293,7 +287,7 @@
                                                     <td>${{ "{:,.2f}".format(mortgage.mortgage_maturity['fortnightly']['total_interest_saved']) }}</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Fortnights to Repay</td>
+                                                    <td>Fortnight to Repay</td>
                                                     <td>{{ mortgage.mortgage_maturity['fortnightly']['fortnights_to_repay'] }}</td>
                                                 </tr>
                                             </tbody>
@@ -302,27 +296,23 @@
                                 </div>
                             </div>
                         </div>
-
                         <hr>
                         <div class="container text-center">
                             <div class="row">
                                 <div class="col">
-                                    <p class="card-text fs-4"><strong>Comments:</strong></p>
-                                    {% for comment in mortgage.comments %}
-                                        <p class="card-text fs-2">{{ comment }}</p>
-                                    {% endfor %}
+                                    <p class="card-text fs-4"><strong>Start Date:</strong></p>
+                                    <p class="card-text fs-2">{{ mortgage.start_date }}</p>
                                 </div>
                                 <div class="col">
-                                    <strong class="fs-4">Created At:</strong>
-                                    <div class="fs-2">{{ mortgage.created_at.strftime('%B %d, %Y %I:%M %p') }}</div>
+                                    <strong class="fs-4">Comments:</strong>
+                                    <p class="card-text fs-2">{{ mortgage.comments }}</p>
                                 </div>
                                 <div class="col">
-                                    <strong class="fs-4">Next New Interest Rate:</strong>
-                                    <div class="fs-2">{{ mortgage.latest_interest_rate }}% (Effective Date: {{ mortgage.latest_effective_date.strftime('%B %d, %Y') }})</div>
+                                    <strong class="fs-4">Mortgage Created at:</strong>
+                                    <p class="card-text fs-2">{{ mortgage.created_at }}</p>
                                 </div>
                             </div>
                         </div>
-
                         <!-- amortization -->
                         <br><br><br>
                         <div class="text-center">
@@ -367,60 +357,60 @@
             </div>
         </div>
     </div>
-
-    <script>
-        $(document).ready(function() {
-            $("#updatePasswordBtn").click(function() {
-                $("#updatePasswordModal").modal('show');
-            });
-
-            $("#updatePasswordForm").submit(function(event) {
-                event.preventDefault();
-                $.ajax({
-                    type: "POST",
-                    url: "{{ url_for('update_password') }}",
-                    data: $(this).serialize(),
-                    success: function(response) {
-                        alert(response.message);
-                        $("#updatePasswordModal").modal('hide');
-                    },
-                    error: function(xhr, status, error) {
-                        alert("Error: " + xhr.responseText);
-                    }
+</div>
+        <script>
+            $(document).ready(function() {
+                $("#updatePasswordBtn").click(function() {
+                    $("#updatePasswordModal").modal('show');
                 });
-            });
 
-            $("#removeAccountBtn").click(function() {
-                $("#removeAccountModal").modal('show');
-            });
-
-            $("#removeAccountForm").submit(function(event) {
-                event.preventDefault();
-                if (confirm("Are you sure you want to remove your account?")) {
+                $("#updatePasswordForm").submit(function(event) {
+                    event.preventDefault();
                     $.ajax({
                         type: "POST",
-                        url: "{{ url_for('remove_user') }}",
+                        url: "{{ url_for('update_password') }}",
+                        data: $(this).serialize(),
                         success: function(response) {
                             alert(response.message);
-                            window.location.href = "{{ url_for('login') }}";
+                            $("#updatePasswordModal").modal('hide');
                         },
                         error: function(xhr, status, error) {
                             alert("Error: " + xhr.responseText);
                         }
                     });
-                }
-            });
-        });
+                });
 
-        function displaySelectedMortgage() {
-            var selectedMortgage = $("#mortgageSelect").val();
-            $(".mortgage-details").hide();
-            $(".mortgage-charts").hide();
-            if (selectedMortgage) {
-                $("#mortgage-" + selectedMortgage).show();
-                $("#charts-" + selectedMortgage).show();
+                $("#removeAccountBtn").click(function() {
+                    $("#removeAccountModal").modal('show');
+                });
+
+                $("#removeAccountForm").submit(function(event) {
+                    event.preventDefault();
+                    if (confirm("Are you sure you want to remove your account?")) {
+                        $.ajax({
+                            type: "POST",
+                            url: "{{ url_for('remove_user') }}",
+                            success: function(response) {
+                                alert(response.message);
+                                window.location.href = "{{ url_for('login') }}";
+                            },
+                            error: function(xhr, status, error) {
+                                alert("Error: " + xhr.responseText);
+                            }
+                        });
+                    }
+                });
+            });
+
+            function displaySelectedMortgage() {
+                var selectedMortgage = $("#mortgageSelect").val();
+                $(".mortgage-details").hide();
+                $(".mortgage-charts").hide();
+                if (selectedMortgage) {
+                    $("#mortgage-" + selectedMortgage).show();
+                    $("#charts-" + selectedMortgage).show();
+                }
             }
-        }
-    </script>
-</body>
+        </script>
+    </body>
 </html>
