--- a/templates/index.html
+++ b/templates/index.html
@@ -300,9 +300,10 @@
                         <div class="container text-center">
                             <div class="row">
                                 <div class="col">
-                                    <p class="card-text fs-4"><strong>Start Date:</strong></p>
+                                    <strong class="fs-4">Start Date:</strong>
                                     <p class="card-text fs-2">{{ mortgage.start_date }}</p>
                                 </div>
+
                                 <div class="col">
                                     <strong class="fs-4">Comments:</strong>
                                     <p class="card-text fs-2">{{ mortgage.comments }}</p>
