--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,20 +18,20 @@
         </div>
     {% endif %}
     <form action="{{ url_for('signup') }}" method="post">
-        <div class="txt_field">
-            <input type="text" id="username" name="username" required>
+        <div class="txt_field fs-3">
+            <input class="fs-3" type="text" id="username" name="username" required>
             <label for="username">Username</label>
         </div>
-        <div class="txt_field">
-            <input type="password" id="password" name="password" required>
+        <div class="txt_field fs-3">
+            <input class="fs-3" type="password" id="password" name="password" required>
             <label for="password">Password</label>
         </div>
-        <div class="txt_field">
-            <input type="password" id="confirm_password" name="confirm_password" required>
+        <div class="txt_field fs-3">
+            <input class="fs-3" type="password" id="confirm_password" name="confirm_password" required>
             <label for="confirm_password">Confirm Password</label>
         </div>
         <input type="submit" value="Sign Up">
-        <div class="signup_link">
+        <div class="signup_link fs-3">
             Already a member? <a href="{{ url_for('login') }}">Log in</a>
         </div>
     </form>
